crates/ferrum-interfaces/tests/ui/vnext/fail/unvalidated_resolved_model_plan_is_not_deserialize.rs
use ferrum_interfaces::vnext::UnvalidatedResolvedModelPlan;

fn main() {
    let _: UnvalidatedResolvedModelPlan = serde_json::from_str("{}").unwrap();
}
